objects/Industry__c.object
<CustomObject>
    <description>A list of industries.</description>
    <fields>
        <fullName>DescriptionText__c</fullName>
        <description>Official description of the industry segment.</description>
        <inlineHelpText>Official description of the industry segment.</inlineHelpText>
        <label>Description</label>
        <length>200</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IndustryCode__c</fullName>
        <description>The official code for this industry according to its standard.</description>
        <inlineHelpText>The official code for this industry according to its standard.</inlineHelpText>
        <label>Industry Code</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IndustryEID__c</fullName>
        <description>The Enterprise ID for this Industry.</description>
        <externalId>true</externalId>
        <inlineHelpText>The Enterprise ID for this Industry.</inlineHelpText>
        <label>Industry EID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>IndustryType__c</fullName>
        <description>The industry classification type, such as NAICS or SIC.</description>
        <inlineHelpText>The industry classification type, such as NAICS or SIC.</inlineHelpText>
        <label>Industry Type</label>
        <picklist>
            <picklistValues>
                <fullName>NAICS 02</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NAICS 07</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ISIC 4</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Industry</label>
    <nameField>
        <label>Industry Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Industries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>